# chocopy-rs

./: .gitmodules  Cargo.toml  DESIGN.md  LICENSE  README.md  test.sh
chocopy-rs/: Cargo.toml
chocopy-rs/src/: local_env.rs  location.rs  main.rs  node.rs
chocopy-rs/src/check/: analyze.rs  class_env.rs  error.rs  local_env.rs  mod.rs
chocopy-rs/src/parse/: generator.rs  lexer.rs  mod.rs  parser.rs  token.rs
chocopy-rs/test/original/pa2/: bad_assign_expr.py.ast  bad_assign_expr.py.ast.typed  bad_duplicate_global_2.py.ast  bad_duplicate_global_2.py.ast.typed
chocopy-rs/test/original/pa3/: error_div_zero.py.ast.typed.s.result  len_invalid_2.py.ast.typed.s.result  list_concat_none.py.ast.typed.s.result  list_get_element_oob_1.py.ast.typed.s.result  object_attr_set_none.py.ast.typed.s.result  object_method_none.py.ast.typed.s.result
chocopy-rs/test/pa1/: good.py  good.py.ast  mergesort.py.ast  nesting.py.ast
chocopy-rs/test/pa2/: bad_assign.py  bad_assign.py.ast  bad_assign.py.ast.typed  bad_class_base.py  bad_class_base.py.ast  bad_class_base.py.ast.typed  bad_for.py  bad_for.py.ast  bad_for.py.ast.typed  bad_for_nonlocal.py  bad_for_nonlocal.py.ast  bad_global_cross.py  bad_global_cross.py.ast.typed  bad_global_nonlocal.py  bad_global_nonlocal.py.ast.typed  bad_if_stmt.py  bad_init.py  bad_init.py.ast  bad_init.py.ast.typed  bad_member.py  bad_member.py.ast  bad_member.py.ast.typed  bad_method.py  bad_method.py.ast  bad_method.py.ast.typed  bad_nonlocal.py  bad_nonlocal.py.ast  bad_nonlocal.py.ast.typed  bad_return.py  bad_return.py.ast  bad_semantic.py  bad_semantic.py.ast  bad_semantic.py.ast.typed  bad_types.py  bad_types.py.ast  bad_types.py.ast.typed  global_cross.py  global_cross.py.ast  good.py  good.py.ast  (+8 more)
chocopy-rs/test/pa3/: class.py  condition_expr.py  condition_stmt.py  div.py  echo.py  empty.py  empty_class.py  evil_main.py  for.py  function.py  global.py  init.py  list.py  nested.py  operations.py  prime.py  return_coerce.py  search.py  simple.py  simple_str.py  string_op.py  vector.py  while.py
src/: main.rs  (+2 more)
(+34 files in other folders)
