[package]
name = "chocopy-rs"
version = "1.1.0"
authors = ["Weiyi Wang <wwylele@gmail.com>"]
edition = "2018"

[dependencies]
chocopy-rs-common = { path = "../chocopy-rs-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
enum_dispatch = "0.3"
getopts = "0.2"
gimli = { version = "0.27", features = ["write"], default-features = false }
object = { version = "0.30", features = ["write"], default-features = false }
cc = "1.0"
once_cell = "1.3"
md-5 = "0.10"
